# xero-settings-manager

./: CMakeLists.txt  PKGBUILD  README.md  xero-settings-manager.kdev4
hacking/: msmstyle
resources/icons/: CMakeLists.txt
src/: CMakeLists.txt  manjaro-category.desktop  xero-category.desktop
src/libmsm/: ActionDialog.cpp  ActionDialog.h  Kernel.cpp  Kernel.h  KernelModel.cpp  KernelModel.h  LanguageCommon.cpp  LanguageCommon.h  LanguagePackages.cpp  LanguagePackages.h  LanguagePackagesItem.cpp  LanguagePackagesItem.h  ListWidget.cpp  ListWidget.h  MsmCommon.cpp  MsmCommon.h  NotifierSettingsDialog.cpp  NotifierSettingsDialog.h  PacmanUtils.cpp  PacmanUtils.h  PageWidget.cpp  PageWidget.h  language_packages.json  translations.qrc
src/libmsm/translations/: msm_ar.ts  msm_ast.ts  msm_az_AZ.ts  msm_bg_BG.ts  msm_ca.ts  msm_cs_CZ.ts  msm_cy.ts  msm_da.ts  msm_de.ts  msm_el.ts  msm_en.ts  msm_es.ts  msm_es_419.ts  msm_es_AR.ts  msm_fa.ts  msm_fa_IR.ts  msm_fi.ts  msm_fo.ts  msm_fr.ts  msm_gl_ES.ts  msm_he.ts  msm_hi.ts  msm_hr.ts  msm_hu.ts  msm_id_ID.ts  msm_is.ts  msm_it.ts  msm_ja.ts  msm_ka.ts  msm_ko.ts  msm_lt.ts  msm_ml.ts  msm_ms.ts  msm_nb.ts  msm_nl.ts  msm_pl.ts  msm_pt_BR.ts  msm_pt_PT.ts  msm_ro.ts  msm_ru.ts  (+15 more)
src/modules/: CMakeLists.txt
src/modules/kernel/: CMakeLists.txt  KernelAuthHelper.cpp  KernelAuthHelper.h  KernelCommon.cpp  KernelCommon.h  KernelInfoDialog.cpp  (+10 more)
src/msm/: CMakeLists.txt  MsmApplication.cpp  MsmApplication.h  MsmWindow.cpp  MsmWindow.h  MsmWindow.ui  main.cpp  msm.qrc  xero-settings-manager.desktop
src/notifier/: CMakeLists.txt
src/notifier/notifier/: CMakeLists.txt  Notifier.cpp  Notifier.h  NotifierApp.cpp  NotifierApp.h  main.cpp  msm_notifier_settings.desktop  notifier.qrc
src/notifier/notifier_kde/: CMakeLists.txt  Notifier.cpp  Notifier.h  NotifierApp.cpp  NotifierApp.h  const.h  main.cpp  msm_kde_notifier.desktop  msm_kde_notifier_settings.desktop  notifier.qrc
(+126 files in other folders)
